[package]
name = "ukulele-midi"
version = "0.1.0"
authors = ["stephaneworkspace <s.bressani@bluewin.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ghakuf = "0.5.6"
byteorder = "1"
log = "0.4"
base64 = "0.13.0"

[dev-dependencies]
chartgeneratorsvg = { git = "ssh://git@github.com/stephaneworkspace/chartgeneratorsvg.git" }

[dependencies.synthrs]
git = "ssh://git@github.com/stephaneworkspace/synthrs.git"
rev = "265ca00"

[dev-dependencies.sdl2]
#features = ["use_mac_framework"]
version = "0.34.3"
