[package]
name = "ukulele-midi"
version = "0.1.0"
authors = ["stephaneworkspace <s.bressani@bluewin.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ghakuf = "0.5.6"
byteorder = "1"
log = "0.4"

[dependencies.synthrs]
git = "https://github.com/stephaneworkspace/synthrs"
rev = "265ca00"
